@@ -1,0 +1,11 @@
+# $NetBSD: Makefile,v 1.1.1.1 2004/11/01 20:32:37 jdolecek Exp $
+
+DISTNAME=	Mail_Mime-1.2.1
+CATEGORIES+=	mail
+
+MAINTAINER=	jdolecek@NetBSD.org
+HOMEPAGE= 	http://pear.php.net/package/Mail_Mime/
+COMMENT=	PHP classes to create and decode mime messages
+
+.include "../../lang/php/pear.mk"
+.include "../../mk/bsd.pkg.mk"
